chore: update .env-example with project-specific configuration

--- a/.env-example
+++ b/.env-example
@@ -1,18 +1,18 @@
 # You should change this, used in docker containers names and Laravel also
 #   dont use spaces
-APP_NAME=laravel
+APP_NAME=camminiditalia
 # The folder name of this project, usually the same as APP_NAME
 #   used to mount volumes inside containers
-DOCKER_PROJECT_DIR_NAME=laravel
+DOCKER_PROJECT_DIR_NAME=camminiditalia
 # The standard APP_URL of Laravel
 APP_URL=http://localhost
 
 # Database credentials
 #   please, please, please: use strong password on production env
 #   there will be a new postgres+postigis container with these credentials
-DB_DATABASE=laravel
-DB_USERNAME=laravel
-DB_PASSWORD=laravel
+DB_DATABASE=camminiditalia
+DB_USERNAME=camminiditalia
+DB_PASSWORD=camminiditalia
 
 # Local or prod environment?
 
