fix: github environment variables

--- a/.env-example
+++ b/.env-example
@@ -10,9 +10,9 @@ APP_URL=http://localhost
 # Database credentials
 #   please, please, please: use strong password on production env
 #   there will be a new postgres+postigis container with these credentials
-DB_DATABASE=laravel
-DB_USERNAME=laravel
-DB_PASSWORD=laravel
+DB_DATABASE=camminiditalia
+DB_USERNAME=camminiditalia
+DB_PASSWORD=camminiditalia
 
 # Local or prod environment?
 
