--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           php-version: "8.4"
           coverage: none
+      - name: Update git submodules
+        run: git submodule update --init --recursive
 
       - name: Configure composer before install
         run: |
