--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,5 +1,19 @@
 parameters:
-  ignoreErrors:
-    -
-      identifier: larastan.noEnvCallsOutsideOfConfig
-      path: config/app.php
+	ignoreErrors:
+		-
+			message: '#^Undefined variable\: \$this$#'
+			identifier: variable.undefined
+			count: 1
+			path: routes/console.php
+
+		-
+			message: '#^Call to an undefined method PHPUnit\\Framework\\TestCase\:\:get\(\)\.$#'
+			identifier: method.notFound
+			count: 1
+			path: tests/Feature/ExampleTest.php
+
+		-
+			message: '#^Undefined variable\: \$this$#'
+			identifier: variable.undefined
+			count: 1
+			path: tests/Pest.php
