feat: Update composer autoload configuration for WmPackage factories

--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,15 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Wm\\WmPackage\\": "src/",
+            "Wm\\WmPackage\\Database\\Factories\\": "wm-package/database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Wm\\WmPackage\\Database\\Factories\\": "wm-package/database/factories/"
         }
     },
     "scripts": {
