--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/nova": "^5.0",
         "laravel/tinker": "^2.9",
         "predis/predis": "^2.3",
-        "wm/wm-package": "dev-feat/geometry-models-oc-4667"
+        "wm/map-multi-linestring": "^0.0.10",
+        "wm/map-point": "^0.0.10",
+        "wm/wm-package": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
