--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 name: Run Tests
 
-on: [push, pull_request, workflow_call, workflow_dispatch]
+on: [pull_request, workflow_call, workflow_dispatch]
 
 jobs:
   laravel-tests:
