--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -54,11 +54,5 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: storage/logs/test.log
-      - name: Upload Laravel log
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: laravel.log
-          path: storage/logs/laravel.log
+          name: test-logs
+          path: storage/logs
