chore: Add LayerFeatures field to Layer Nova resource
This commit adds a new field called "layer_features" to the Layer Nova resource. The field is only visible on forms and is provided by the "wm/layer-features" package.

chore: Update composer.json

The composer.json file has been updated to include the "wm/layer-features" package as a dependency.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite --host"
+        "dev": "vite --host",
+        "build-layer-features": "cd nova-components/LayerFeatures && npm run dev",
+        "build-layer-features-prod": "cd nova-components/LayerFeatures && npm run prod"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
