--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "predis/predis": "^2.3",
         "wm/map-multi-linestring": "*",
         "wm/map-point": "*",
-        "wm/wm-package": "*"
+        "wm/wm-package": "*",
+        "wm/layer-features": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -94,6 +95,10 @@
         {
             "type": "path",
             "url": "./wm-package"
+        },
+        {
+            "type": "path",
+            "url": "./nova-components/LayerFeatures"
         }
     ]
 }
