--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,7 @@ services:
       - ${DOCKER_PHP_PORT}:9000
     volumes:
       - ".:/var/www/html/${DOCKER_PROJECT_DIR_NAME}"
+      - "../wm-package:/var/www/html/wm-package"
     working_dir: "/var/www/html/${DOCKER_PROJECT_DIR_NAME}"
   db:
     image: postgis/postgis:17-3.5-alpine
@@ -38,6 +39,9 @@ services:
       - discovery.type=single-node
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      # https://stackoverflow.com/questions/73508356/cannot-setup-elasticsearch-kibana-from-docker-kibana-missing-authentication-cr
+      - xpack.security.enabled=false
+      - xpack.security.enrollment.enabled=false
     ulimits:
       memlock:
         soft: -1
