chore: composer update for sentry

--- a/.env-example
+++ b/.env-example
@@ -120,8 +120,8 @@ SCOUT_DRIVER=Matchish\ScoutElasticSearch\Engines\ElasticSearchEngine
 ELASTICSEARCH_HOST=elasticsearch:9200
 ELASTICSEARCH_SSL_VERIFICATION=false
 
-
-
+# Use to configure sentry dns
+SENTRY_LARAVEL_DSN=
 
 
 
