--- a/nova-components/LayerFeatures/package.json
+++ b/nova-components/LayerFeatures/package.json
@@ -9,10 +9,16 @@
     "production": "mix --production"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.5.13",
+    "laravel-mix": "^6.0.49",
     "laravel-nova-devtool": "file:vendor/laravel/nova-devtool",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "vue-loader": "^16.8.3"
   },
   "dependencies": {
+    "ag-grid-community": "^33.1.1",
+    "ag-grid-enterprise": "^33.1.1",
+    "ag-grid-vue3": "^33.1.1",
     "browser-sync": "^3.0.3"
   }
 }
