--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/nova": "^5.0",
+        "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "predis/predis": "^2.3",
         "wm/map-multi-linestring": "*",
@@ -71,7 +72,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
