--- a/develop.compose.yml
+++ b/develop.compose.yml
@@ -1,7 +1,6 @@
-
 services:
   php:
-    extends: 
+    extends:
       file: compose.yml
       service: php
     ports:
@@ -9,22 +8,21 @@ services:
       - ${DOCKER_VITE_PORT}:5173
     platform: linux/amd64
   db:
-    extends: 
+    extends:
       file: compose.yml
       service: db
     platform: linux/amd64
   redis:
-    extends: 
+    extends:
       file: compose.yml
       service: redis
-    platform: linux/amd64
   elasticsearch:
-    extends: 
+    security_opt:
+      - seccomp:unconfined
+    extends:
       file: compose.yml
       service: elasticsearch
-    platform: linux/amd64
-  
-    
+
   # needed for aws s3 storage testing
   minio:
     image: "minio/minio:latest"
@@ -52,7 +50,6 @@ services:
   mailpit:
     container_name: "mailpit_${APP_NAME}"
     image: "axllent/mailpit:latest"
-    platform: linux/amd64
     ports:
-    - "${FORWARD_MAILPIT_PORT:-1025}:1025"
-    - "${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025"
+      - "${FORWARD_MAILPIT_PORT:-1025}:1025"
+      - "${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025"
