chore: Update elasticsearch image and composer.lock version
- Updated the elasticsearch image to use "docker.elastic.co/elasticsearch/elasticsearch:8.17.1" instead of "elasticsearch:8.17.1".
- Changed the version in composer.lock from "dev-main" to "dev-develop".

--- a/compose.yml
+++ b/compose.yml
@@ -31,17 +31,13 @@ services:
     container_name: "redis_${APP_NAME}"
     restart: always
   elasticsearch:
-    image: elasticsearch:8.17.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.1
     container_name: "elasticsearch_${APP_NAME}"
     environment:
       - node.name=elasticsearch
-      - cluster.name=elasticsearch-cluster
       - discovery.type=single-node
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      # https://stackoverflow.com/questions/73508356/cannot-setup-elasticsearch-kibana-from-docker-kibana-missing-authentication-cr
       - xpack.security.enabled=false
-      - xpack.security.enrollment.enabled=false
     ulimits:
       memlock:
         soft: -1
