--- a/nova-components/LayerFeatures/package.json
+++ b/nova-components/LayerFeatures/package.json
@@ -1,24 +1,60 @@
 {
-  "private": true,
+  "name": "wm/layer-features",
+  "description": "Layer Features Nova Component",
+  "keywords": [
+    "laravel",
+    "nova"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": ">=8.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Wm\\LayerFeatures\\": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Wm\\LayerFeatures\\LayerFeaturesServiceProvider"
+      ]
+    }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
+    "dev": "mix",
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "prod": "npm run production",
-    "production": "mix --production"
+    "hot": "mix watch --hot",
+    "prod": "mix --production"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.5.13",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "@vue/compiler-sfc": "^3.2.31",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^8.0.0",
+    "hash-sum": "^2.0.0",
     "laravel-mix": "^6.0.49",
     "laravel-nova-devtool": "file:vendor/laravel/nova-devtool",
-    "lodash": "^4.17.21",
-    "vue-loader": "^16.8.3"
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^12.1.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.9.5",
+    "vue": "^3.2.31",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
-    "ag-grid-community": "^33.1.1",
-    "ag-grid-enterprise": "^33.1.1",
-    "ag-grid-vue3": "^33.1.1",
-    "browser-sync": "^3.0.3"
+    "ag-grid-community": "^30.2.1",
+    "ag-grid-vue3": "^30.2.1",
+    "laravel-nova": "^1.12.3"
   }
 }
