--- a/compose.yml
+++ b/compose.yml
@@ -37,8 +37,10 @@ services:
       - node.name=elasticsearch
       - discovery.type=single-node
       - bootstrap.memory_lock=true
-      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m" # Aggiungi esplicitamente i limiti di heap
     ulimits:
       memlock:
         soft: -1
         hard: -1
+    mem_limit: 1G # Limite totale di memoria per il container
+    mem_reservation: 512M # Memoria minima riservata
