--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         ]
     },
     "extra": {
+        "enable-patching": true,
         "laravel": {
             "dont-discover": []
         }
