--- a/compose.yml
+++ b/compose.yml
@@ -33,6 +33,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.17.1
     container_name: "elasticsearch_${APP_NAME}"
+    restart: always
     environment:
       - node.name=elasticsearch
       - discovery.type=single-node
