--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.9",
         "predis/predis": "^2.3",
+        "whitecube/nova-flexible-content": "^2.0",
         "wm/layer-features": "@dev",
         "wm/map-multi-linestring": "*",
         "wm/map-point": "*",
