--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -21,4 +21,4 @@ jobs:
           username: ${{ vars.USERNAMEDEV }}
           port: ${{ vars.PORTDEV }}
           key: ${{ secrets.SSHKEYDEV }}
-          script: "cd /var/www/html/camminiditalia && git pull && git submodule update --init --recursive && docker exec php_camminiditalia bash scripts/deploy_prod.sh"
+          script: "cd /var/www/html/camminiditalia && git pull && git submodule update --init --recursive && docker exec php_camminiditaliadev bash scripts/deploy_prod.sh"
