chore: add format command to composer.json for code formatting

--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve --host 0.0.0.0\" \"php artisan horizon\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
-        ]
+        ],
+        "format": "vendor/bin/pint --ansi"
     },
     "extra": {
         "enable-patching": true,
