chore(dependencies): 🔧 update wm/map-multi-linestring to version 1.0.4
- Updated the composer.json and composer.lock files to upgrade the "wm/map-multi-linestring" package from version 1.0.3 to 1.0.4.
- This change ensures compatibility with the latest improvements and bug fixes provided in the updated package.
- Adjusted the content-hash and references in the composer.lock to match the new version.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "predis/predis": "^2.3",
         "whitecube/nova-flexible-content": "^2.0.1",
         "wm/layer-features": "@dev",
-        "wm/map-multi-linestring": "*",
+        "wm/map-multi-linestring": "^1.0.4",
         "wm/map-point": "*",
         "wm/wm-package": "*"
     },
