chore(vscode): 🔧 adjust Xdebug port and add file ignore pattern  - Updated the Xdebug listening port from 9200 to 9003 in the VSCode launch configuration. - Added an ignore pattern to exclude files in the vendor directory from being considered for debugging.  docs(docker): 📝 add Docker container naming convention documentation  - Introduced a new documentation file `Docker.mdc` explaining the naming conventions for Docker containers. - Detailed the correct and incorrect formats for container names utilizing `${APP_NAME}`. - Provided regex patterns for identifying proper and improper naming. - Included examples for Docker commands with correct and incorrect naming.  fix(scripts): 🐛 update Docker container naming in scripts  - Replaced underscores with hyphens in Docker container names within scripts. - Ensured consistency with the new naming convention by using `postgres-${APP_NAME:-camminiditalia}` and `php-${APP_NAME:-camminiditalia}`. - Made the `APP_NAME` variable optional with a default to `camminiditalia` if not set.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,13 @@
             "name": "Listen for Xdebug",
             "type": "php",
             "request": "launch",
-            "port": 9200,
+            "port": 9003,
             "pathMappings": {
               "/var/www/html/camminiditalia": "${workspaceRoot}"
             },
+            "ignore": [
+                "**/vendor/**/*.php"
+            ]
         }
     ]
 }
