fix(workflows): 🐛 correct docker container name in deployment scripts
- Changed container name from `php_camminiditaliadev` to `php-camminiditaliadev` in the development deployment script.
- Updated container name from `php_camminiditalia` to `php-camminiditalia` in the production deployment script.
- Ensures consistency with expected container naming conventions.

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -21,4 +21,4 @@ jobs:
           username: ${{ vars.USERNAMEPROD }}
           port: ${{ vars.PORTPROD }}
           key: ${{ secrets.SSHKEYPROD }}
-          script: "cd /var/www/html/camminiditalia && git pull && git submodule update --init --recursive && docker exec php_camminiditalia bash scripts/deploy_prod.sh"
+          script: "cd /var/www/html/camminiditalia && git pull && git submodule update --init --recursive && docker exec php-camminiditalia bash scripts/deploy_prod.sh"
