--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,17 @@
             "request": "launch",
             "port": 9003,
             "pathMappings": {
-              "/var/www/html/camminiditalia": "${workspaceRoot}"
+             "/var/www/html/camminiditalia": "${workspaceRoot}"
             },
             "ignore": [
                 "**/vendor/**/*.php"
-            ]
+            ],
+            "log": true,
+            "xdebugSettings": {
+                "max_data": 65535,
+                "max_children": 100,
+                "max_depth": 5
+            }
         }
     ]
 }
