feat(compose): ✨ add Kibana service configuration
- Introduced Kibana service to the Docker Compose setup to enhance the stack with visualization capabilities.
- Configured Kibana to depend on Elasticsearch and set up necessary environment variables.
- Enabled server configuration for Kibana, including port and host settings.
- Updated `develop.compose.yml` to extend the Kibana service, ensuring consistent environment setup across development and production.

--- a/develop.compose.yml
+++ b/develop.compose.yml
@@ -18,6 +18,10 @@ services:
     extends:
       file: compose.yml
       service: elasticsearch
+  kibana:
+    extends:
+      file: compose.yml
+      service: kibana
 
   # needed for aws s3 storage testing
   minio:
