--- a/compose.yml
+++ b/compose.yml
@@ -45,3 +45,18 @@ services:
       memlock:
         soft: -1
         hard: -1
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.17.1
+    container_name: "kibana-${APP_NAME}"
+    restart: always
+    depends_on:
+      - elasticsearch
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - xpack.security.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - SERVER_NAME=kibana
+      - SERVER_HOST=0.0.0.0
+      - SERVER_BASEPATH=${KIBANA_BASEPATH:-/kibana}
+    ports:
+      - ${DOCKER_KIBANA_PORT:-5601}:5601
