--- a/.env-example
+++ b/.env-example
@@ -118,6 +118,8 @@ VITE_APP_NAME="${APP_NAME}"
 
 SCOUT_DRIVER=Matchish\ScoutElasticSearch\Engines\ElasticSearchEngine
 ELASTICSEARCH_HOST=elasticsearch:9200
+ELASTICSEARCH_USER=elastic
+ELASTICSEARCH_PASSWORD=changeme
 ELASTICSEARCH_SSL_VERIFICATION=false
 
 # Use to configure sentry dns
