--- a/local.compose.yml
+++ b/local.compose.yml
@@ -12,9 +12,23 @@ services:
       file: develop.compose.yml
       service: redis
   elasticsearch:
-    extends:
-      file: develop.compose.yml
-      service: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.1
+    container_name: "elasticsearch-${APP_NAME}"
+    restart: always
+    environment:
+      - node.name=elasticsearch
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      # Password hardcodata per ambiente local
+      - ELASTIC_PASSWORD=local123
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
   kibana:
     image: docker.elastic.co/kibana/kibana:8.17.1
     container_name: "kibana-${APP_NAME}"
@@ -24,7 +38,8 @@ services:
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=kibana_system
-      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
+      # Password hardcodata per ambiente local (deve corrispondere a ELASTIC_PASSWORD)
+      - ELASTICSEARCH_PASSWORD=local123
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=false
       - SERVER_NAME=kibana
