feat(compose): ✨ add elasticsearch-init service for automatic password setup
- Introduced `elasticsearch-init` service to automatically set the password for `kibana_system` using a curl-based init container.
- Updated `compose.yml` to include the new service and adjusted dependencies for `kibana` to depend on `elasticsearch-init`.
- Modified `develop.compose.yml` and `local.compose.yml` to incorporate `elasticsearch-init` with specific environment configurations.
- Added a `horizon` service with necessary dependencies and configurations across different environments.
- Enhanced local environment setup by disabling security on Elasticsearch and Kibana for easier access.

--- a/develop.compose.yml
+++ b/develop.compose.yml
@@ -18,12 +18,28 @@ services:
     extends:
       file: compose.yml
       service: elasticsearch
+  elasticsearch-init:
+    extends:
+      file: compose.yml
+      service: elasticsearch-init
+    environment:
+      - ELASTICSEARCH_PASSWORD=local123
   kibana:
     extends:
       file: compose.yml
       service: kibana
-
-  # needed for aws s3 storage testing
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=kibana_system
+      # Password hardcodata per ambiente local (deve corrispondere a ELASTIC_PASSWORD)
+      - ELASTICSEARCH_PASSWORD=local123
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=false
+      - SERVER_NAME=kibana
+      - SERVER_HOST=0.0.0.0
+      # Rimossi SERVER_BASEPATH e SERVER_REWRITEBASEPATH per accesso diretto in local
+    ports:
+      - ${DOCKER_KIBANA_PORT:-5601}:5601
   minio:
     image: "minio/minio:latest"
     container_name: "minio-${APP_NAME}"
@@ -47,7 +63,10 @@ services:
         - local
       retries: 3
       timeout: 5s
-  # needed for mails testing
+  horizon:
+    extends:
+      file: compose.yml
+      service: horizon
   mailpit:
     container_name: "mailpit-${APP_NAME}"
     image: "axllent/mailpit:latest"
