--- a/compose.yml
+++ b/compose.yml
@@ -41,26 +41,71 @@ services:
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=false
       - xpack.security.transport.ssl.enabled=false
-      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD:-${ELASTICSEARCH_PASSWORD:-changeme}}
+      - ELASTIC_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ulimits:
       memlock:
         soft: -1
         hard: -1
+  # Init container necessario per impostare automaticamente la password di kibana_system
+  # Elasticsearch non supporta variabili d'ambiente per kibana_system, quindi va impostata via API
+  elasticsearch-init:
+    image: curlimages/curl:latest
+    container_name: "elasticsearch-init-${APP_NAME}"
+    depends_on:
+      elasticsearch:
+        condition: service_started
+    environment:
+      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
+    command:
+      - sh
+      - -c
+      - |
+        echo "Waiting for Elasticsearch to be ready..."
+        i=0
+        while [ $$i -lt 60 ]; do
+          if curl -s -f -u elastic:$$ELASTICSEARCH_PASSWORD http://elasticsearch:9200/_cluster/health > /dev/null 2>&1; then
+            echo "Elasticsearch is ready!"
+            break
+          fi
+          i=$$((i + 1))
+          sleep 2
+        done
+        echo "Setting password for kibana_system user..."
+        curl -s -X POST -u elastic:$$ELASTICSEARCH_PASSWORD \
+          http://elasticsearch:9200/_security/user/kibana_system/_password \
+          -H "Content-Type: application/json" \
+          -d "{\"password\":\"$$ELASTICSEARCH_PASSWORD\"}" || true
+        echo "Password set successfully!"
+    restart: "no"
   kibana:
     image: docker.elastic.co/kibana/kibana:8.17.1
     container_name: "kibana-${APP_NAME}"
     restart: always
     depends_on:
-      - elasticsearch
+      elasticsearch-init:
+        condition: service_completed_successfully
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=kibana_system
+      # Password deve corrispondere a ELASTIC_PASSWORD
       - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=false
       - SERVER_NAME=kibana
       - SERVER_HOST=0.0.0.0
       - SERVER_BASEPATH=/kibana
+      - SERVER_REWRITEBASEPATH=false
     ports:
       - ${DOCKER_KIBANA_PORT:-5601}:5601
+  horizon:
+    extends:
+      service: php
+    container_name: "horizon-${APP_NAME}"
+    command: php artisan horizon
+    restart: always
+    depends_on:
+      - redis
+      - db
+    # Rimuove la porta PHP-FPM non necessaria per Horizon
+    ports: []
