--- a/local.compose.yml
+++ b/local.compose.yml
@@ -37,27 +37,120 @@ services:
       - node.name=elasticsearch
       - discovery.type=single-node
       - bootstrap.memory_lock=true
-      # Sicurezza disattivata per ambiente local
-      - xpack.security.enabled=false
+      # Sicurezza abilitata per supportare Enterprise Search
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+      - ELASTIC_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ulimits:
       memlock:
         soft: -1
         hard: -1
+  # Init container necessario per impostare automaticamente la password di kibana_system
+  # Elasticsearch non supporta variabili d'ambiente per kibana_system, quindi va impostata via API
+  # Il container viene rimosso automaticamente dopo l'esecuzione
+  elasticsearch-init:
+    image: curlimages/curl:latest
+    container_name: "elasticsearch-init-${APP_NAME}"
+    depends_on:
+      elasticsearch:
+        condition: service_started
+    environment:
+      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
+    command:
+      - sh
+      - -c
+      - |
+        echo "Waiting for Elasticsearch to be ready..."
+        i=0
+        while [ $$i -lt 60 ]; do
+          if curl -s -f -u elastic:$$ELASTICSEARCH_PASSWORD http://elasticsearch:9200/_cluster/health > /dev/null 2>&1; then
+            echo "Elasticsearch is ready!"
+            break
+          fi
+          i=$$((i + 1))
+          sleep 2
+        done
+        echo "Setting password for kibana_system user..."
+        curl -s -X POST -u elastic:$$ELASTICSEARCH_PASSWORD \
+          http://elasticsearch:9200/_security/user/kibana_system/_password \
+          -H "Content-Type: application/json" \
+          -d "{\"password\":\"$$ELASTICSEARCH_PASSWORD\"}" || true
+        echo "Password set successfully!"
+        # Rimuove il container dopo l'esecuzione
+        echo "Removing init container..."
+        docker rm -f elasticsearch-init-${APP_NAME} 2>/dev/null || true
+    restart: "no"
+    # Usa la socket Docker per permettere la rimozione del container stesso
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+  # Init container per indicizzazione automatica di Scout
+  # Esegue l'importazione di EcTrack in Elasticsearch all'avvio
+  scout-init:
+    build: ./docker/configs/phpfpm
+    image: wm-phpfpm:8.4
+    container_name: "scout-init-${APP_NAME}"
+    depends_on:
+      elasticsearch-init:
+        condition: service_completed_successfully
+      db:
+        condition: service_started
+    environment:
+      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    volumes:
+      - ".:/var/www/html/${DOCKER_PROJECT_DIR_NAME}"
+      - "../wm-package:/var/www/html/wm-package"
+      - /var/run/docker.sock:/var/run/docker.sock
+    working_dir: "/var/www/html/${DOCKER_PROJECT_DIR_NAME}"
+    command:
+      - sh
+      - -c
+      - |
+        echo "Waiting for Elasticsearch to be ready..."
+        i=0
+        while [ $$i -lt 60 ]; do
+          if curl -s -f -u elastic:$$ELASTICSEARCH_PASSWORD http://elasticsearch:9200/_cluster/health > /dev/null 2>&1; then
+            echo "Elasticsearch is ready!"
+            break
+          fi
+          i=$$((i + 1))
+          sleep 2
+        done
+        echo "Waiting for database to be ready..."
+        i=0
+        while [ $$i -lt 60 ]; do
+          if php artisan db:show > /dev/null 2>&1; then
+            echo "Database is ready!"
+            break
+          fi
+          i=$$((i + 1))
+          sleep 2
+        done
+        echo "Starting Scout import for EcTrack..."
+        php artisan scout:import "Wm\WmPackage\Models\EcTrack"
+        echo "Scout import completed successfully!"
+        # Rimuove il container dopo l'esecuzione
+        echo "Removing init container..."
+        docker rm -f scout-init-${APP_NAME} 2>/dev/null || true
+    restart: "no"
   kibana:
     image: docker.elastic.co/kibana/kibana:8.17.1
     container_name: "kibana-${APP_NAME}"
     restart: always
     depends_on:
-      elasticsearch:
-        condition: service_started
+      elasticsearch-init:
+        condition: service_completed_successfully
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      # Sicurezza disattivata per ambiente local
-      - xpack.security.enabled=false
+      - ELASTICSEARCH_USERNAME=kibana_system
+      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD:-changeme}
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=false
       - SERVER_NAME=kibana
       - SERVER_HOST=0.0.0.0
-      # Rimossi SERVER_BASEPATH e SERVER_REWRITEBASEPATH per accesso diretto in local
     ports:
       - ${DOCKER_KIBANA_PORT:-5601}:5601
   # Servizi da develop.compose.yml (mantengono la catena di ereditarietà)
