chore(vscode): 🔧 update path mapping to use workspaceFolder
- Change path mapping from `${workspaceRoot}` to `${workspaceFolder}` in `.vscode/launch.json`.

refactor(nova): ♻️ remove unused model property from Layer class

- Delete the `$model` property from the `Layer` class in `app/Nova/Layer.php` as it is not being used.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "port": 9003,
             "pathMappings": {
-             "/var/www/html/camminiditalia": "${workspaceRoot}"
+                "/var/www/html/camminiditalia": "${workspaceFolder}"
             },
             "ignore": [
                 "**/vendor/**/*.php"
