chore(composer): 🔧 update autoload paths and package version
- Remove unnecessary autoload paths for "Wm\\WmPackage" from `composer.json`
- Change the version of "wm/wm-package" from "dev-wmintegrations" to "dev-develop" in `composer.lock`
- Update the reference hash for "wm/wm-package" in `composer.lock`
- Add new autoload paths for "Wm\\WmPackage\\Nova\\Fields\\FeatureCollectionMap" and "Wm\\WmPackage\\Nova\\Fields\\FeatureCollectionGrid" in `composer.lock`

--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,7 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/",
-            "Wm\\WmPackage\\": "src/",
-            "Wm\\WmPackage\\Database\\Factories\\": "wm-package/database/factories/"
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
